--- a/backend/ApplyDB.json
+++ b/backend/ApplyDB.json
@@ -1,1 +1,1 @@
-{"ApplyDB":[]}
+{"ApplyDB":[{"email":"om@1gmail.com","loanAmount":"9000","address":"old mong","income":"120000","firstName":"om","lastName":"pp","phone":"8920278900","whatsapp":"8920278900","maritalStatus":"separated","gender":"male","loanPurpose":"other"}]}
